syntax = "proto3";

import "google/protobuf/descriptor.proto";

option java_package = "com.noseparte.game.bean.proto";
option java_outer_classname = "Options";

extend google.protobuf.MessageOptions {
  optional int32 msgId = 51234;
}